--- a/calculator.css
+++ b/calculator.css
@@ -10,3 +10,12 @@
     border-color: darkgray;
     text-align: right;
 }
+
+.max-wid{
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    /* padding-top: 15px;
+    padding-bottom: 15px; */
+}
+
