added fix height for screen in the CSS.File See: #1

--- a/calculator.css
+++ b/calculator.css
@@ -9,6 +9,8 @@
     border-style: solid;
     border-color: darkgray;
     text-align: right;
+    font-size: xx-large;
+    height:70px;
 }
 
 .max-wid{
